force-app/main/default/objects/Case/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Arrival Airport</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Arrival Flights</relationshipLabel>
    <relationshipName>Arrival_Flights</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>