force-app/main/default/objects/Case/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Departure Airport</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Departure Flights</relationshipLabel>
    <relationshipName>Departure_Flights</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>