force-app/main/default/objects/Case/validationRules/Departure_Arrival_Airports.validationRule-meta.xml
<ValidationRule>
    <fullName>Departure_Arrival_Airports</fullName>
    <active>true</active>
    <errorConditionFormula>Arrival_Airport__c  =  Departure_Airport__c</errorConditionFormula>
    <errorMessage>Departure&amp;Arrival Airports can&apos;t be the same.</errorMessage>
</ValidationRule>